[package]
name = "ruc"
version = "7.5.1"
authors = ["hui.fan@mail.ru"]
edition = "2021"
description = "Rust Util Collections"
keywords = ["utils", "error-management"]
categories = ["development-tools::debugging"]
license = "MIT"
homepage = "https://github.com/rust-util-collections/ruc"
repository = "https://github.com/rust-util-collections/ruc.git"

[package.metadata.docs.rs]
features = ["full"]

[dependencies]
sha3 = { version = "0.10.8", optional = true }

ed25519-zebra = { version = "4.0.0", optional = true }

rand = { version = "0.8", optional = true }
base64 = {version = "0.22.1", optional = true }
hex = {version = "0.4.3", optional = true }

flate2 = {version = "1.0.34", optional = true }

time = { version = "0.3", features = ["formatting"] }
nix = { version = "0.29", features = ["socket"], optional = true }
ssh2 = { version = "0.9.4", optional = true }

reqwest = { version = "0.12.8", default-features = false, features = [ "blocking" ], optional = true }

serde = { version = "1", features = ["derive"], optional = true }
serde-transcode = { version = "1.1.1", optional = true }
serde_json = { version = "1.0.128", optional = true }
rmp = { package = "rmp-serde", version = "1.3.0", optional = true }

[features]
default = [ "ansi" ]

full = [ "cmd", "uau", "ssh", "http", "algo", "ende" ]

ansi = []
compact = []

cmd = []
uau = [ "nix", "rand" ]
ssh = [ "ssh2" ]
http = [ "reqwest" ]

algo = [
    "algo_hash",
    "algo_crypto",
    "algo_rand",
]

algo_hash = [ "sha3" ]
algo_rand = [ "rand", "ende_hex" ]
algo_crypto = [ "ed25519-zebra", "ende_base64", "ende_hex" ]

ende = [
    "ende_hex",
    "ende_base64",
    "ende_compress",
    "ende_json",
    "ende_msgpack",
    "ende_transcode",
]

ende_hex = [ "hex" ]
ende_base64 = [ "base64" ]
ende_compress = [ "flate2" ]

ende_json = [ "serde", "serde_json" ]
ende_msgpack = [ "serde", "rmp" ]

ende_transcode = [ "serde-transcode", "ende_json", "ende_msgpack" ]
